--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.request: ''  # Valeur par défaut pour request
 
 services:
     # default configuration for services in *this* file
@@ -22,3 +23,14 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Définir un adaptateur spécifique pour le stockage de fichiers
+    App\Storage\FileStorageAdapter:
+        arguments:
+            $basePath: '%kernel.project_dir%/data/storage'
+
+    App\Service\StorageService:
+        arguments:
+            $adapter: '@App\Storage\FileStorageAdapter'
+            $request: '%app.request%'  # Injection du paramètre
+
